--- a/views/main.ejs
+++ b/views/main.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Movie Recommandation</title>
   <meta charset="utf-8">
@@ -9,160 +10,191 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <style>
-    /* Remove the navbar's default rounded borders and increase the bottom margin */ 
+    /* Remove the navbar's default rounded borders and increase the bottom margin */
+
     .navbar {
       margin-bottom: 50px;
       border-radius: 0;
     }
-    
-    /* Remove the jumbotron's default bottom margin */ 
-     .jumbotron {
+
+    /* Remove the jumbotron's default bottom margin */
+
+    .jumbotron {
       margin-bottom: 0;
     }
-   
+
     /* Add a gray background color and some padding to the footer */
+
     footer {
       background-color: #f2f2f2;
       padding: 25px;
     }
+
+    .grid {
+      display: grid;
+      /* define the number of grid columns */
+      /* grid-template-columns: repeat( auto-fit, minmax(250px, 1fr)); */
+      grid-template-columns: 1fr 1fr 1fr
+    }
   </style>
 </head>
+
 <body>
-
-<div class="jumbotron">
-  <div class="container text-center">
-    <h1>Movies</h1>      
-    <p>Movie Recommandation Website</p>
-    <form method="post" action="/" class="form-inline">
-    <input placeholder="Search Movie" class="form-control"  type="text" id="txtMovie" name="searchMovie"> 
-    <input class="btn btn-danger" type="submit" id="submitbtn" value="Submit">
-    </form>
- </div>
-</div>
-
-<nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="/">Home</a></li>
-        <li class="active"><a href="/">Test</a></li>        
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <% if (valid) { %>
-          <li><a href="/user"><span class="glyphicon glyphicon-user"></span> Profile </a></li>
-        <% } else { %>
-          <li><a href="/sociallogin"><span class="glyphicon glyphicon-user"></span> Log-in </a></li>
-        <% } %>
-        <li><a href="/visualization"><span class="glyphicon glyphicon"></span> Graph</a></li>
-      </ul>
+  <div class="jumbotron">
+    <div class="container text-center">
+      <h1>Movies</h1>
+      <p>Movie Recommandation Website</p>
+      <form method="post" action="/" class="form-inline">
+        <input placeholder="Search Movie" class="form-control" type="text" id="txtMovie" name="searchMovie">
+        <input class="btn btn-danger" type="submit" id="submitbtn" value="Submit">
+      </form>
     </div>
   </div>
-</nav>
-
-<div class="container">    
-  <div class="row">
-    <div class="col-sm-6">
-      <div class="panel panel-primary">
-        <div class="panel-heading">Movie List</div>
-        <div class="panel-body">
-        <table class="table table-hover">
-        <tr>
-          <th>Movie</td>
-            <th>Poster</th>
-            <th>Tagline</td>
-              <th>Released</th>
-              <th >Watch</th>
-        </tr>
-
-      <% movies.forEach(function(movie){ %>
-    <tr>
-      <td onclick="myFunction('<%= movie.title %>')" , "createRel('<%= movie.title %>')">
-        <%= movie.title %>
-      </td>
-      <td>
-        <img src="http://neo4j-contrib.github.io/developer-resources/language-guides/assets/posters/<%= movie.title %>.jpg">
-      </td>
-      <td>
-        <%= movie.tagline %>
-      </td>
-      <td>
-        <%= movie.released %>
-      </td>
-      <td rowspan=".3">
-        <% if (valid) { %>
-          <form method="post" action="/prefer">
-            <button value="1 <%= movie.title %>" name="like"><i class="fa fa-thumbs-o-up" style="font-size:20px;color:blue"></i></button>
-          </form>
-          <form method="post" action="/user">
-            <button onclick="" value="<%= movie.title %>" name="inputClickWatch"><i class="fa fa-play" style="font-size:25px"></i></button>
-          </form>
-          <form method="post" action="/prefer">
-            <button value="-1<%= movie.title %>" name="like"><i class="fa fa-thumbs-o-down" style="font-size:20px;color:red"></i></button>
-          </form>
-        <% } %>
-      </td>
-    </tr>
-  <% }) %>
-    </table>
-    </div>
+  <nav class="navbar navbar-inverse">
+    <div class="grid-container grid-container--fit">
+      <div class="collapse navbar-collapse" id="myNavbar">
+        <ul class="nav navbar-nav">
+          <li class="active">
+            <a href="/">Home</a>
+          </li>
+          <li class="active">
+            <a href="/test">Test</a>
+          </li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <% if (valid) { %>
+            <li>
+              <a href="/user">
+                <span class="glyphicon glyphicon-user"></span> Profile </a>
+            </li>
+            <% } else { %>
+              <li>
+                <a href="/sociallogin">
+                  <span class="glyphicon glyphicon-user"></span> Log-in </a>
+              </li>
+              <% } %>
+                <li>
+                  <a href="/visualization">
+                    <span class="glyphicon glyphicon"></span> Graph</a>
+                </li>
+        </ul>
       </div>
     </div>
-    <div class="col-sm-6" > 
-      <div class="panel panel-danger">
-        <div class="panel-heading">Recommanded Movies</div>
-        <div class="panel-body">
-        <table class="table table-hover">
-        <tr>
-          <th>Movie</td>
-            <th>Poster</th>
-            <th>Tagline</td>
-              <th>Released</th>
-              <th >Watch</th>
-        </tr>
-        <% movies2.forEach(function(movie){ %>
-        <tr>
-          <td onclick="myFunction('<%= movie.title %>')" , "createRel('<%= movie.title %>')">
-            <%= movie.title %>
-          </td>
-          <td>
-            <img src="http://neo4j-contrib.github.io/developer-resources/language-guides/assets/posters/<%= movie.title %>.jpg">
-          </td>
-          <td>
-          <%= movie.tagline %>
-          </td>
-          <td>
-          <%= movie.released %>
-         </td>
-         <td rowspan=".3">
-            <form method="post" action="/prefer">
-              <button value="1 <%= movie.title %>" name="like"><i class="fa fa-thumbs-o-up" style="font-size:20px;color:blue"></i></button>
-            </form>
-            <form method="post" action="/user">
-            <button onclick="" value="<%= movie.title %>" name="inputClickWatch"><i class="fa fa-play" style="font-size:25px"></i></button>
-            </form>
-            <form method="post" action="/prefer">
-              <button value="-1<%= movie.title %>" name="like"><i class="fa fa-thumbs-o-down" style="font-size:20px;color:red"></i></button>
-            </form>
-        </td>
-        </tr>
-        <% }) %>
-    </table>
+  </nav>
+  <div class="grid-container--fit">
+    <div class="row">
+      <div class="col-md-6">
+        <div class="panel panel-primary">
+          <div class="panel-heading">Movie List</div>
+          <div class="panel-body">
+            <table class="table table-hover">
+              <tr>
+                <th>Movie</th>
+                <th>Poster</th>
+                <th>Tagline</th>
+                <th>Released</th>
+                <th>Watch</th>
+              </tr>
+              <% movies.forEach(function(movie){ %>
+                <tr>
+                  <td onclick='myFunction("<%= movie.title %>")' , "createRel('<%= movie.title %>')">
+                    <%= movie.title %>
+                  </td>
+                  <td>
+                    <img src="http://neo4j-contrib.github.io/developer-resources/language-guides/assets/posters/<%= movie.title %>.jpg">
+                  </td>
+                  <td>
+                    <%= movie.tagline %>
+                  </td>
+                  <td>
+                    <%= movie.released %>
+                  </td>
+                  <td rowspan=".3">
+                    <% if (valid) { %>
+                      <form method="post" action="/prefer">
+                        <button value="1 <%= movie.title %>" name="like">
+                          <i class="fa fa-thumbs-o-up" style="font-size:20px;color:blue"></i>
+                        </button>
+                      </form>
+                      <form method="post" action="/user">
+                        <button onclick="" value="<%= movie.title %>" name="inputClickWatch">
+                          <i class="fa fa-play" style="font-size:25px"></i>
+                        </button>
+                      </form>
+                      <form method="post" action="/prefer">
+                        <button value="-1<%= movie.title %>" name="like">
+                          <i class="fa fa-thumbs-o-down" style="font-size:20px;color:red"></i>
+                        </button>
+                      </form>
+                      <% } %>
+                  </td>
+                </tr>
+                <% }) %>
+            </table>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="panel panel-success">
+          <div class="panel-heading">Recommanded Movies</div>
+          <div class="panel-body">
+            <table class="table table-hover">
+              <tr>
+                <th>Movie</th>
+                <th>Poster</th>
+                <th>Tagline</th>
+                <th>Released</th>
+                <th>Watch</th>
+              </tr>
+              <% movies2.forEach(function(movie){ %>
+                <tr>
+                  <td onclick='myFunction("<%= movie.title %>")' , "createRel('<%= movie.title %>')">
+                    <%= movie.title %>
+                  </td>
+                  <td>
+                    <img src="http://neo4j-contrib.github.io/developer-resources/language-guides/assets/posters/<%= movie.title %>.jpg">
+                  </td>
+                  <td>
+                    <%= movie.tagline %>
+                  </td>
+                  <td>
+                    <%= movie.released %>
+                  </td>
+                  <td rowspan=".3">
+                    <form method="post" action="/prefer">
+                      <button value="1 <%= movie.title %>" name="like">
+                        <i class="fa fa-thumbs-o-up" style="font-size:20px;color:blue"></i>
+                      </button>
+                    </form>
+                    <form method="post" action="/user">
+                      <button onclick="" value="<%= movie.title %>" name="inputClickWatch">
+                        <i class="fa fa-play" style="font-size:25px"></i>
+                      </button>
+                    </form>
+                    <form method="post" action="/prefer">
+                      <button value="-1<%= movie.title %>" name="like">
+                        <i class="fa fa-thumbs-o-down" style="font-size:20px;color:red"></i>
+                      </button>
+                    </form>
+                  </td>
+                </tr>
+                <% }) %>
+            </table>
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div><br>
-
-<footer class="container-fluid text-center">
-  <p>MOSA</p>  
-</footer>
-
-<script>
+  <br>
+  <footer class="container-fluid text-center">
+    <p>Copyright &copy 2003-2018 MOS. All rights reserved.</p>
+  </footer>
+  <script>
     function myFunction(x) {
       document.getElementById("txtMovie").value = x;
       document.getElementById("submitbtn").click();
     }
-
   </script>
 </body>
+
 </html>
