--- a/views/main.ejs
+++ b/views/main.ejs
@@ -105,7 +105,11 @@
                     <%= movie.title %>
                   </td>
                   <td>
-                    <img src="http://neo4j-contrib.github.io/developer-resources/language-guides/assets/posters/<%= movie.title %>.jpg">
+                    <% if (movie.title == "Frost/Nixon") { %>
+                      <img height="100" width="70" src='https://github.com/folowpig/Neo4j-Movie-Recommendation/blob/master/images/Frost:Nixon.jpg?raw=true'>
+                      <% } else { %>
+                        <img height="100" width="70" src='https://github.com/folowpig/Neo4j-Movie-Recommendation/blob/master/images/<%= movie.title %>.jpg?raw=true'>
+                        <% } %>
                   </td>
                   <td>
                     <%= movie.tagline %>
@@ -117,17 +121,18 @@
                     <% if (valid) { %>
                       <form method="post" action="/prefer">
                         <button value="1 <%= movie.title %>" name="like">
-                          <i class="fa fa-thumbs-o-up" style="font-size:20px;color:blue"></i>
+                          <i class="fa fa-thumbs-o-up" style="font-size:22.5px;color:blue">
+                          </i>
                         </button>
                       </form>
                       <form method="post" action="/user">
-                        <button onclick="" value="<%= movie.title %>" name="inputClickWatch">
+                        <button onClick="" value="<%= movie.title %>" name="inputClickWatch">
                           <i class="fa fa-play" style="font-size:25px"></i>
                         </button>
                       </form>
                       <form method="post" action="/prefer">
                         <button value="-1<%= movie.title %>" name="like">
-                          <i class="fa fa-thumbs-o-down" style="font-size:20px;color:red"></i>
+                          <i class="fa fa-thumbs-o-down" style="font-size:22.5px;color:red"></i>
                         </button>
                       </form>
                       <% } %>
@@ -156,7 +161,7 @@
                     <%= movie.title %>
                   </td>
                   <td>
-                    <img src="http://neo4j-contrib.github.io/developer-resources/language-guides/assets/posters/<%= movie.title %>.jpg">
+                    <img height="100" width="70" src='https://github.com/folowpig/Neo4j-Movie-Recommendation/blob/master/images/<%= movie.title %>.jpg?raw=true'>
                   </td>
                   <td>
                     <%= movie.tagline %>
@@ -167,7 +172,7 @@
                   <td rowspan=".3">
                     <form method="post" action="/prefer">
                       <button value="1 <%= movie.title %>" name="like">
-                        <i class="fa fa-thumbs-o-up" style="font-size:20px;color:blue"></i>
+                        <i class="fa fa-thumbs-o-up" style="font-size:22.5px;color:blue"></i>
                       </button>
                     </form>
                     <form method="post" action="/user">
@@ -177,7 +182,7 @@
                     </form>
                     <form method="post" action="/prefer">
                       <button value="-1<%= movie.title %>" name="like">
-                        <i class="fa fa-thumbs-o-down" style="font-size:20px;color:red"></i>
+                        <i class="fa fa-thumbs-o-down" style="font-size:22.5px;color:red"></i>
                       </button>
                     </form>
                   </td>
