--- a/views/search.ejs
+++ b/views/search.ejs
@@ -114,7 +114,11 @@
                     <%= search.title %>
                   </td>
                   <td>
-                    <img src="http://neo4j-contrib.github.io/developer-resources/language-guides/assets/posters/<%= search.title %>.jpg">
+                    <% if (movie.title == "Frost/Nixon") { %>
+                      <img height="100" width="70" src='https://github.com/folowpig/Neo4j-Movie-Recommendation/blob/master/images/Frost:Nixon.jpg?raw=true'>
+                      <% } else { %>
+                        <img height="100" width="70" src='https://github.com/folowpig/Neo4j-Movie-Recommendation/blob/master/images/<%= search.title %>.jpg?raw=true'>
+                        <% } %>
                   </td>
                   <td>
                     <%= search.tagline %>
@@ -126,7 +130,7 @@
                     <% if (valid) { %>
                       <form method="post" action="/prefer">
                         <button value="1 <%= search.title %>" name="like">
-                          <i class="fa fa-thumbs-o-up" style="font-size:20px;color:blue"></i>
+                          <i class="fa fa-thumbs-o-up" style="font-size:22.5px;color:blue"></i>
                         </button>
                       </form>
                       <form method="post" action="/user">
@@ -136,7 +140,7 @@
                       </form>
                       <form method="post" action="/prefer">
                         <button value="-1<%= search.title %>" name="like">
-                          <i class="fa fa-thumbs-o-down" style="font-size:20px;color:red"></i>
+                          <i class="fa fa-thumbs-o-down" style="font-size:22.5px;color:red"></i>
                         </button>
                       </form>
                       <% } %>
