--- a/views/search.ejs
+++ b/views/search.ejs
@@ -115,10 +115,10 @@
                   </td>
                   <td>
                     <% if (movie.title == "Frost/Nixon") { %>
-                      <img height="120" width="80" src='https://github.com/folowpig/Neo4j-Movie-Recommendation/blob/master/images/Frost:Nixon.jpg?raw=true'>
-                      <% } else { %>
-                        <img height="120" width="80" src='https://github.com/folowpig/Neo4j-Movie-Recommendation/blob/master/images/<%= search.title %>.jpg?raw=true'>
-                        <% } %>
+                      <img height="120" width="80" src='http://git.mobile-os.com/mos/Neo4jVisualization/raw/v0.0.002/public/images/Frost:Nixon.jpg'>
+                    <% } else { %>
+                      <img height="120" width="80" src='http://git.mobile-os.com/mos/Neo4jVisualization/raw/v0.0.002/public/images/<%= search.title %>.jpg'>
+                    <% } %>
                   </td>
                   <td>
                     <%= search.tagline %>
