--- a/views/main.ejs
+++ b/views/main.ejs
@@ -143,6 +143,7 @@
           </div>
         </div>
       </div>
+      <% if (valid) { %>
       <div class="col-lg-5">
         <div class="panel panel-success">
           <div class="panel-heading">Recommanded Movies</div>
@@ -195,6 +196,7 @@
           </div>
         </div>
       </div>
+      <% } %>
     </div>
   </div>
   <br>
