--- a/views/main.ejs
+++ b/views/main.ejs
@@ -121,8 +121,7 @@
                     <% if (valid) { %>
                       <form method="post" action="/prefer">
                         <button value="1 <%= movie.title %>" name="like">
-                          <i class="fa fa-thumbs-o-up" style="font-size:22.5px;color:blue">
-                          </i>
+                          <i class="fa fa-thumbs-o-up" style="font-size:22.5px;color:blue"></i>
                         </button>
                       </form>
                       <form method="post" action="/user">
