--- a/views/graphVis.ejs
+++ b/views/graphVis.ejs
@@ -38,7 +38,7 @@
   </style>
   <script src="https://rawgit.com/neo4j-contrib/neovis.js/master/dist/neovis.js"></script>
 </head>
-<body>
+<body onload="draw()">
 
 <div class="container-fluid">
   <div class="row content">
