--- a/views/graphVis.ejs
+++ b/views/graphVis.ejs
@@ -38,7 +38,7 @@
   </style>
   <script src="https://rawgit.com/neo4j-contrib/neovis.js/master/dist/neovis.js"></script>
 </head>
-<body>
+<body onload="draw()">
 
 <div class="container-fluid">
   <div class="row content">
@@ -65,8 +65,8 @@ function draw() {
       server_user: "neo4j",
       server_password: "admin",
       labels: {
-        "Person": {
-            caption: "name"   
+        "User": {
+            caption: "id"   
         },
         "Movie": {
             caption: "title"
@@ -92,7 +92,7 @@ function draw1() {
       server_user: "neo4j",
       server_password: "sling-cleansers-tugs",
       labels: {
-        "GENRE": {
+        "Genre": {
           caption: "name"   
         },
         "Movie": {
@@ -124,7 +124,7 @@ function draw1() {
           size: "imdbVotes",
           community: "community"
         },
-        "GENRE": {
+        "Genre": {
           caption: "name"  
         }
       },
