--- a/views/test.ejs
+++ b/views/test.ejs
@@ -53,21 +53,55 @@
 
 <div class="container-fluid" >    
   <div class="row" >
-    <% movies.forEach(function(movie1){ %>
+    <% var x = 0; %>
+    <% movies.forEach(function(movie1){%>
       <div class="col-sm-3"style="height:500px" >
         <div class="panel panel-primary">
-          <div class="panel-heading" align="center"> <%= movie1.title %></div>
+          <div class="panel-heading" align="center"> <%= movie1.title%></div>
           <div class="panel-body" align="center">
-            <% if (movie1.title == "Frost/Nixon") { %>
-              <img height="320" width="220" src='http://git.mobile-os.com/mos/Neo4jVisualization/raw/v0.0.002/public/images/Frost:Nixon.jpg'>
-            <% } else { %>
-              <img height="320" width="220" src='http://git.mobile-os.com/mos/Neo4jVisualization/raw/v0.0.002/public/images/<%= movie1.title %>.jpg'>
-            <% } %>
+            <!-- <form method='post' action=""> -->
+              <% if (movie1.title == "Frost/Nixon") { %>
+                <input class="all" onclick="enableClick(id)" id="<%= x %>" value="<%= movie1.title %>" type="image" height="320" width="220" src='http://git.mobile-os.com/mos/Neo4jVisualization/raw/v0.0.002/public/images/Frost:Nixon.jpg'/>
+                <button hidden="true" id="b<%= x %>" onclick="disableClick('<%= x %>')">Cancel this choice</button>
+              <% } else { %>
+                <input class="all" onclick="enableClick(id)" id="<%= x %>" value="<%= movie1.title %>" type="image" height="320" width="220" src='http://git.mobile-os.com/mos/Neo4jVisualization/raw/v0.0.002/public/images/<%= movie1.title %>.jpg'/>
+                <button hidden="true" id="b<%= x %>" onclick="disableClick('<%= x %>')">Cancel this choice</button>
+              <% } %>
+              <% x=x+1; %>
+            <!-- </form> -->
           </div>    
           </div>
       </div>
-    <% }) %> 
+      
+    <% }) %>
   </div>
 </div>
+
+<script>
+  var count = 0;
+  function enableClick(d) {
+    document.getElementById(d).hidden=true;
+    document.getElementById("b"+d).hidden=false;
+    count = count +1;
+    if (count== 3) {
+      var elements = document.getElementsByClassName("all");
+      for(var i = 0; i<elements.length; i++) {
+        elements[i].setAttribute('disabled','disabled');
+      }
+    }
+  }
+  function disableClick(d) {
+    document.getElementById(d).hidden=false;
+    document.getElementById("b"+d).hidden=true;
+    count = count -1;
+    if (count < 3) {
+      var elements = document.getElementsByClassName("all");
+      for(var i = 0; i<elements.length; i++) {
+        elements[i].removeAttribute('disabled');
+      }
+    }
+  }
+
+</script>
 </body>
 </html>
