--- a/views/test.ejs
+++ b/views/test.ejs
@@ -84,7 +84,6 @@
           </div>    
           </div>
       </div>
-      
     <% }) %>
   </div>
 </div>
@@ -94,10 +93,10 @@
   function enableClick(d) {
     document.getElementById(d).hidden=true;
     document.getElementById("b"+d).hidden=false;
-    count = count +1;
-    if (count== 3) {
+    count = count + 1;
+    if (count == 3) {
       var elements = document.getElementsByClassName("all");
-      for(var i = 0; i<elements.length; i++) {
+      for(var i = 0; i < elements.length; i++) {
         elements[i].setAttribute('disabled','disabled');
       }
     }
@@ -105,15 +104,14 @@
   function disableClick(d) {
     document.getElementById(d).hidden=false;
     document.getElementById("b"+d).hidden=true;
-    count = count -1;
+    count = count - 1;
     if (count < 3) {
       var elements = document.getElementsByClassName("all");
-      for(var i = 0; i<elements.length; i++) {
+      for(var i = 0; i < elements.length; i++) {
         elements[i].removeAttribute('disabled');
       }
     }
   }
-
 </script>
 </body>
 </html>
