--- a/views/test.ejs
+++ b/views/test.ejs
@@ -56,8 +56,21 @@
         <li class="active"><a href="/test">Test</a></li>        
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="/sociallogin"><span class="glyphicon glyphicon-user"></span> Log-in </a></li>
-        <li><a href="/visualization"><span class="glyphicon glyphicon"></span> Graph</a></li>
+          <% if (valid) { %>
+            <li>
+              <a href="/user">
+                <span class="glyphicon glyphicon-user"></span> Profile </a>
+            </li>
+            <% } else { %>
+              <li>
+                <a href="/sociallogin">
+                  <span class="glyphicon glyphicon-user"></span> Log-in </a>
+              </li>
+              <% } %>
+            <li>
+              <a href="/visualization">
+                <span class="glyphicon glyphicon"></span> Graph</a>
+            </li>
       </ul>
     </div>
   </div>
@@ -71,16 +84,23 @@
         <div class="panel panel-primary">
           <div class="panel-heading" align="center"> <%= movie1.title%></div>
           <div class="panel-body" align="center">
-            <!-- <form method='post' action=""> -->
               <% if (movie1.title == "Frost/Nixon") { %>
-                <input class="all" onclick="enableClick(id)" id="<%= x %>" value="<%= movie1.title %>" type="image" height="320" width="220" src='http://git.mobile-os.com/mos/Neo4jVisualization/raw/v0.0.002/public/images/Frost:Nixon.jpg'/>
-                <button class="button" hidden="true" id="b<%= x %>" onclick="disableClick('<%= x %>')">Cancel this choice</button>
-              <% } else { %>
-                <input class="all" onclick="enableClick(id)" id="<%= x %>" value="<%= movie1.title %>" type="image" height="320" width="220" src='http://git.mobile-os.com/mos/Neo4jVisualization/raw/v0.0.002/public/images/<%= movie1.title %>.jpg'/>
-                <button class="button" hidden="true" id="b<%= x %>" onclick="disableClick('<%= x %>')">Cancel this choice</button>
-              <% } %>
+              <form method='post' action="/test">
+                <input class="all" onclick="enableClick(id)" name="like" id="<%= x %>" value="1 <%= movie1.title %>" type="image" height="320" width="220" src='http://git.mobile-os.com/mos/Neo4jVisualization/raw/v0.0.002/public/images/Frost:Nixon.jpg'/>
+              </form>  
+              <form method='post' action="/test">  
+                <button class="button" hidden="true" name="like" id="b<%= x %>" value="-1<%= movie1.title %>" onclick="disableClick('<%= x %>')">Cancel this choice</button>
+              </form>  
+                <% } else { %>
+              <form method='post' action="/test">    
+                <input class="all" onclick="enableClick(id)" name="like" id="<%= x %>" value="1 <%= movie1.title %>" type="image" height="320" width="220" src='http://git.mobile-os.com/mos/Neo4jVisualization/raw/v0.0.002/public/images/<%= movie1.title %>.jpg'/>
+              </form>
+              <form method='post' action="/test">
+                <button class="button" hidden="true" name="like" id="b<%= x %>" value="-1<%= movie1.title %>" onclick="disableClick('<%= x %>')">Cancel this choice</button>
+              </form>
+                <% } %>
               <% x=x+1; %>
-            <!-- </form> -->
+            
           </div>    
           </div>
       </div>
@@ -94,7 +114,7 @@
     document.getElementById(d).hidden=true;
     document.getElementById("b"+d).hidden=false;
     count = count + 1;
-    if (count == 3) {
+    if (count > 3) {
       var elements = document.getElementsByClassName("all");
       for(var i = 0; i < elements.length; i++) {
         elements[i].setAttribute('disabled','disabled');
