--- a/views/initChoose.ejs
+++ b/views/initChoose.ejs
@@ -144,7 +144,7 @@
       document.getElementById(d).hidden = true;
       document.getElementById("b" + d).hidden = false;
       count = count + 1;
-      if (count > 3) {
+      if (count >= 3) {
         document.getElementById("goNext").style.display="block";
         var elements = document.getElementsByClassName("all");
         for (var i = 0; i < elements.length; i++) {
